# Plutus-Contracts

./: LICENSE  README.md
OrderValidator/: CHANGELOG.md  OrderValidator.cabal  README.md  cabal.project
OrderValidator/src/: Deploy.hs  OrderValidator.hs  Trace.hs
